k8s/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: distributed-security
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: authentication
            port:
              number: 10000
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: autherization
            port:
              number: 12000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
